# NDKLib

./: build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/haohao/ndklib/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/include/: haohao.h
app/src/main/cpp/native/: CMakeLists.txt  native.cpp
app/src/main/java/com/haohao/ndklib/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/haohao/ndklib/: ExampleUnitTest.java
gen-libs/: CMakeLists.txt  build.gradle
gen-libs/src/main/: AndroidManifest.xml
gen-libs/src/main/cpp/haohao/: CMakeLists.txt  haohao.cpp  haohao.h
gen-libs/src/main/cpp/nannan/: CMakeLists.txt  nannan.cpp  nannan.h
gen-libs/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
